change word-break to word-wrap to prevent broken words

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -564,9 +564,7 @@ body .post {
   font-family: 'Source Sans Pro', sans-serif;
   color: #333332;
   border-bottom: 1px solid #f2f2f0;
-  -ms-word-break: break-all;
-  word-break: break-all;
-  word-break: break-word;
+  word-wrap: break-word;
 }
 /* line 208, ../sass/partials/_page.scss */
 body .post hr {
